tmc-sm/templates/demo/monitoring/02-deploy/05-ingress.yaml
#@ load("@ytt:data", "data")
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: prometheus-sm
  namespace: tmc-local
spec:
  ingressClassName: tmc-local
  virtualhost:
    fqdn: #@ "prometheus-sm.{}".format(data.values.tld_domain)
    tls:
      secretName: prometheus-sm-tls
  tcpproxy:
    services:
    - name: prometheus-server-tmc-local-monitoring-tmc-local
      port: 9090
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: prometheus
  namespace: monitoring
spec:
  ingressClassName: tmc-local
  virtualhost:
    fqdn: #@ "prometheus.{}".format(data.values.tld_domain)
    tls:
      secretName: prometheus-tls
  tcpproxy:
    services:
    - name: prometheus-service
      port: 80
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: grafana
  namespace: monitoring
spec:
  ingressClassName: tmc-local
  virtualhost:
    fqdn: #@ "grafana.{}".format(data.values.tld_domain)
    tls:
      secretName: grafana-tls
  tcpproxy:
    services:
    - name: grafana
      port: 80
